# kosinski

./: kosinski.cabal
benchmark/: Main.hs
src/Codec/Compression/: Kosinski.hs
test/: Main.hs
