name:                kosinski
version:             0.1.0.0
synopsis:            Compression used in Sonic the Hedgehog
license:             BSD3
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
category:            Codec
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Codec.Compression.Kosinski
  build-depends:       base >=4.9
                     , bytestring >=0.10 && <0.11
                     , lens
  default-language:    Haskell2010
