name:                kosinski
version:             0.1.0.0
synopsis:            Compression used in Sonic the Hedgehog
license:             BSD3
license-file:        LICENSE
author:              Brian McKenna
maintainer:          brian@brianmckenna.org
category:            Codec
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Codec.Compression.Kosinski
  build-depends:       base >=4.9
                     , bytestring >=0.10 && <0.11
                     , lens
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite kosinski-tests
  main-is:             test/Main.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , bytestring
                     , kosinski
                     , tasty
                     , tasty-hunit
  default-language:    Haskell2010

benchmark kosinski-benchmarks
  main-is:             benchmark/Main.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , bytestring
                     , filepath
                     , time
                     , kosinski
                     , deepseq
  default-language:    Haskell2010
